Complete Category IV: Grand Prizes

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -1180,4 +1180,92 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/manga-of-the-year-jury-choice.webp" />
 </div>
 
+<hr className="my-4" />
+
+## Film of the Year
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>Blue Giant <sup>[<a href="https://myanimelist.net/anime/50183/Blue_Giant" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/140499/BLUE-GIANT/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Blue Lock the Movie: Episode Nagi <sup>[<a href="https://myanimelist.net/anime/54866/Blue_Lock__Episode_Nagi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163147/Blue-Lock-EPISODE-Nagi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>The Boy and the Heron <sup>[<a href="https://myanimelist.net/anime/36699/Kimitachi_wa_Dou_Ikiru_ka" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/109979/Kimitachi-wa-Dou-Ikiru-ka/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>The Colors Within <sup>[<a href="https://myanimelist.net/anime/53747/Kimi_no_Iro" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/158166/Kimi-no-Iro/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>The Concierge <sup>[<a href="https://myanimelist.net/anime/55115/Hokkyoku_Hyakkaten_no_Concierge-san" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164226/Hokkyoku-Hyakkaten-no-Conciergesan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Detective Conan: Million Dollar Pentagram <sup>[<a href="https://myanimelist.net/anime/56785/Meitantei_Conan_Movie_27__100-man_Dollar_no_Michishirube" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/169754/Meitantei-Conan-100man-Dol-no-Michishirube/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Haikyuu!! The Dumpster Battle <sup>[<a href="https://myanimelist.net/anime/52742/Haikyuu_Movie__Gomisuteba_no_Kessen" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153658/Haikyuu-Gomi-Suteba-no-Kessen/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Look Back <sup>[<a href="https://myanimelist.net/anime/58125/Look_Back" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/174788/Look-Back/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Mononoke the Movie: Phantom in the Rain <sup>[<a href="https://myanimelist.net/anime/52107/Mononoke_Movie__Karakasa" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151117/Mononoke-Karakasa/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>My Oni Girl <sup>[<a href="https://myanimelist.net/anime/58449/Suki_demo_Kirai_na_Amanojaku" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/148080/Suki-demo-Kirai-na-Amanojaku/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Pretty Guardian Sailor Moon Cosmos the Movie <sup>[<a href="https://myanimelist.net/anime/51716/Bishoujo_Senshi_Sailor_Moon_Cosmos_Movie" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/148149/Bishoujo-Senshi-Sailor-Moon-Cosmos--Zenpen/" target="_blank" rel="noopener noreferrer">AL Part 1</a>\]\[<a href="https://anilist.co/anime/160850/Bishoujo-Senshi-Sailor-Moon-Cosmos--Kouhen/" target="_blank" rel="noopener noreferrer">AL Part 2</a>\]</sup></li>
+
+    <li>Spy x Family: Code White <sup>[<a href="https://myanimelist.net/anime/53888/Spy_x_Family_Movie__Code__White" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/158928/SPYFAMILY-CODE-White/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+</ul>
+
+**Winners**
+
+- **People's Choice:** Haikyuu!! The Dumpster Battle
+- **Jury Choice:** Look Back
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/film-of-the-year-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/film-of-the-year-jury-choice.webp" />
+</div>
+
+<hr className="my-4" />
+
+## Anime of the Year
+
+**Nominations**
+
+<ul className="grid grid-cols-1 md:grid-cols-2 gap-x-4 place-items-start">
+
+    <li>A Sign of Affection <sup>[<a href="https://myanimelist.net/anime/55866/Yubisaki_to_Renren" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166794/Yubisaki-to-Renren/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Brave Bang Bravern <sup>[<a href="https://myanimelist.net/anime/55528/Yuuki_Bakuhatsu_Bang_Bravern" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/165598/Yuuki-Bakuhatsu-Bang-Bravern/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Dandadan <sup>[<a href="https://myanimelist.net/anime/57334/Dandadan" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171018/Dandadan/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>The Dangers in My Heart S2 <sup>[<a href="https://myanimelist.net/anime/55690/Boku_no_Kokoro_no_Yabai_Yatsu_2nd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/166216/Boku-no-Kokoro-no-Yabai-Yatsu-2nd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Delicious in Dungeon <sup>[<a href="https://myanimelist.net/anime/52701/Dungeon_Meshi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/153518/Dungeon-Meshi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>The Elusive Samurai <sup>[<a href="https://myanimelist.net/anime/54724/Nige_Jouzu_no_Wakagimi" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/162896/Nige-Jouzu-no-Wakagimi/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Girls Band Cry <sup>[<a href="https://myanimelist.net/anime/55102/Girls_Band_Cry" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/164212/GIRLS-BAND-CRY/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Too Many Losing Heroines <sup>[<a href="https://myanimelist.net/anime/57524/Make_Heroine_ga_Oosugiru" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/171457/Make-Heroine-ga-Oosugiru/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Orb: On the Movements of the Earth <sup>[<a href="https://myanimelist.net/anime/52215/Chi_Chikyuu_no_Undou_ni_Tsuite" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/151514/Chi-Chikyuu-no-Undou-ni-Tsuite/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Re:Zero Season 3 <sup>[<a href="https://myanimelist.net/anime/54857/Re_Zero_kara_Hajimeru_Isekai_Seikatsu_3rd_Season" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/163134/ReZero-kara-Hajimeru-Isekai-Seikatsu-3rd-Season/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Sound! Euphonium Season 3 <sup>[<a href="https://myanimelist.net/anime/39894/Hibike_Euphonium_3" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/109731/Hibike-Euphonium-3/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+    <li>Yatagarasu <sup>[<a href="https://myanimelist.net/anime/56980/Karasu_wa_Aruji_wo_Erabanai" target="_blank" rel="noopener noreferrer">MAL</a>]\[<a href="https://anilist.co/anime/170503/Karasu-wa-Aruji-wo-Erabanai/" target="_blank" rel="noopener noreferrer">AniList</a>\]</sup></li>
+
+</ul>
+
+**Winners**
+
+- **People's Choice:** Dandadan
+- **Jury Choice:** Delicious in Dungeon
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-2 place-items-center">
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/anime-of-the-year-peoples-choice.webp" />
+    <img className="my-1" src="/images/blog/bacademy-awards-2025/anime-of-the-year-jury-choice.webp" />
+</div>
+
 <hr className="my-0 mt-2 mb-4" />
