--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -61,8 +61,9 @@ published: true
     - [Film of the Year](#film-of-the-year)
     - [Anime of the Year](#anime-of-the-year)
     </div>
-
 </div>
+
+- [Acknowledgements](#acknowledgements)
 
 <hr className="my-4" />
 
@@ -1267,5 +1268,21 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/anime-of-the-year-peoples-choice.webp" />
     <img className="my-1" src="/images/blog/bacademy-awards-2025/anime-of-the-year-jury-choice.webp" />
 </div>
+
+<hr className="my-4" />
+
+# Acknowledgements
+
+<img className="my-1 mx-auto md:w-3/4" src="/images/blog/bacademy-awards-2025/acknowledgements.webp" />
+
+- Bengaluru Anime Club
+- Japan Habba
+- **Jury:** Jose, Harish, Ajit, Aravind, Sakaido, Kedar, Param, Anushka, Bhavna, Rutu
+- **Presentation Slides:** Sakaido, Ila, Kedar
+- **Presenters (Japan Habba):** Divishth, Ajit
+- **Presenters (YouTube):** HKS, Sakaido
+- Ila for drawing the Nijika and Ryo chibi avatars for the YouTube presentation
+
+Thank you!
 
 <hr className="my-0 mt-2 mb-4" />
