Add a Jump to Index button at the end of every section

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -103,6 +103,11 @@ published: true
 - **Country of Origin** \
   Anime (series and films) must be Japanese productions animated by Japanese studios; source material need not be Japanese. Manga must be published in a Japanese manga magazine.
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 # Category I: Character Awards
@@ -136,6 +141,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-main-character-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Supporting Character
@@ -161,6 +171,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-supporting-character-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Antagonist
@@ -186,6 +201,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-antagonist-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Cast
@@ -216,6 +236,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-cast-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best "Must Protect" Character
@@ -241,6 +266,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-must-protect-character-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Boy
@@ -266,6 +296,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-boy-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Girl
@@ -291,6 +326,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-girl-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Couple
@@ -321,6 +361,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-couple-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 # Category II: Genre Awards
@@ -354,6 +399,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-mystery-thriller-or-horror-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Slice-of-Life
@@ -385,6 +435,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-slice-of-life-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Action or Adventure
@@ -416,6 +471,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-action-or-adventure-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Sports or Arts
@@ -447,6 +507,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-sports-or-arts-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Drama or Psychological
@@ -478,6 +543,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-drama-or-psychological-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Romance
@@ -509,6 +579,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-romance-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Comedy
@@ -540,6 +615,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-comedy-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Sci-Fi or Mecha
@@ -571,6 +651,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-sci-fi-or-mecha-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Fantasy
@@ -602,6 +687,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-fantasy-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 # Category III: Audiovisual Awards
@@ -634,6 +724,11 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-character-design-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Voice Actor (Female)
@@ -664,6 +759,11 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-voice-actor-female-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Voice Actor (Male)
@@ -694,6 +794,11 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-voice-actor-male-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Animation
@@ -724,6 +829,11 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-animation-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Art Direction
@@ -754,6 +864,11 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-art-direction-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Director
@@ -796,6 +911,11 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-director-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Sound
@@ -826,6 +946,11 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-sound-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Music Video
@@ -858,6 +983,11 @@ published: true
     <iframe style={{'width': '100%', 'aspectRatio': '16/9', 'marginBottom': '30px', 'margin': 'auto'}} src="https://www.youtube.com/embed/sZ1OD0cL6Qw" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Opening
@@ -907,6 +1037,11 @@ published: true
 </div>
 
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Ending
@@ -961,6 +1096,11 @@ published: true
     <iframe style={{'width': '100%', 'aspectRatio': '16/9', 'marginBottom': '30px', 'margin': 'auto'}} src="https://www.youtube.com/embed/Sy-CYyfmO6g" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Episode
@@ -1003,6 +1143,11 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-episode-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 # Category IV: Grand Prizes
@@ -1048,6 +1193,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/retrospective-anime-of-the-year-2004-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Returning Series
@@ -1093,6 +1243,11 @@ published: true
 </div>
 
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Best Original Anime
@@ -1137,6 +1292,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-original-anime-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Manga of the Year
@@ -1181,6 +1341,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/manga-of-the-year-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Film of the Year
@@ -1225,6 +1390,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/film-of-the-year-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 ## Anime of the Year
@@ -1269,6 +1439,11 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/anime-of-the-year-jury-choice.webp" />
 </div>
 
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 <hr className="my-4" />
 
 # Acknowledgements
@@ -1284,5 +1459,11 @@ published: true
 - Ila for drawing the Nijika and Ryo chibi avatars for the YouTube presentation
 
 Thank you!
+
+<div className="text-right">
+  <a href="#index" className="hover:underline">
+    🔝 Jump to Index
+  </a>
+</div>
 
 <hr className="my-0 mt-2 mb-4" />
