--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -63,7 +63,6 @@ published: true
 </div>
 
 - [Acknowledgements](#acknowledgements)
-
 <hr className="my-4" />
 
 # BACademy Awards 2025
@@ -102,11 +101,6 @@ published: true
 - **Country of Origin** \
   Anime (series and films) must be Japanese productions animated by Japanese studios; source material need not be Japanese. Manga must be published in a Japanese manga magazine.
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 # Category I: Character Awards
@@ -140,11 +134,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-main-character-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Supporting Character
@@ -170,11 +159,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-supporting-character-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Antagonist
@@ -200,11 +184,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-antagonist-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Cast
@@ -235,11 +214,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-cast-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best "Must Protect" Character
@@ -265,11 +239,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-must-protect-character-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Boy
@@ -295,11 +264,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-boy-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Girl
@@ -325,11 +289,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-girl-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Couple
@@ -360,11 +319,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-couple-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 # Category II: Genre Awards
@@ -398,11 +352,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-mystery-thriller-or-horror-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Slice-of-Life
@@ -434,11 +383,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-slice-of-life-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Action or Adventure
@@ -470,11 +414,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-action-or-adventure-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Sports or Arts
@@ -506,11 +445,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-sports-or-arts-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Drama or Psychological
@@ -542,11 +476,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-drama-or-psychological-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Romance
@@ -578,11 +507,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-romance-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Comedy
@@ -614,11 +538,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-comedy-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Sci-Fi or Mecha
@@ -650,11 +569,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-sci-fi-or-mecha-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Fantasy
@@ -686,11 +600,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-fantasy-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 # Category III: Audiovisual Awards
@@ -723,11 +632,6 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-character-design-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Voice Actor (Female)
@@ -758,11 +662,6 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-voice-actor-female-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Voice Actor (Male)
@@ -793,11 +692,6 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-voice-actor-male-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Animation
@@ -828,11 +722,6 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-animation-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Art Direction
@@ -863,11 +752,6 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-art-direction-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Director
@@ -910,11 +794,6 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-director-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Sound
@@ -945,11 +824,6 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-sound-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Music Video
@@ -982,11 +856,6 @@ published: true
     <iframe style={{'width': '100%', 'aspectRatio': '16/9', 'marginBottom': '30px', 'margin': 'auto'}} src="https://www.youtube.com/embed/sZ1OD0cL6Qw" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Opening
@@ -1036,11 +905,6 @@ published: true
 </div>
 
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Ending
@@ -1095,11 +959,6 @@ published: true
     <iframe style={{'width': '100%', 'aspectRatio': '16/9', 'marginBottom': '30px', 'margin': 'auto'}} src="https://www.youtube.com/embed/Sy-CYyfmO6g" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Episode
@@ -1142,11 +1001,6 @@ published: true
     <img className="my-1 md:w-3/4" src="/images/blog/bacademy-awards-2025/best-episode-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 # Category IV: Grand Prizes
@@ -1192,11 +1046,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/retrospective-anime-of-the-year-2004-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Returning Series
@@ -1242,11 +1091,6 @@ published: true
 </div>
 
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Best Original Anime
@@ -1291,11 +1135,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/best-original-anime-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Manga of the Year
@@ -1340,11 +1179,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/manga-of-the-year-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Film of the Year
@@ -1389,11 +1223,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/film-of-the-year-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 ## Anime of the Year
@@ -1438,11 +1267,6 @@ published: true
     <img className="my-1" src="/images/blog/bacademy-awards-2025/anime-of-the-year-jury-choice.webp" />
 </div>
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
 <hr className="my-4" />
 
 # Acknowledgements
@@ -1459,10 +1283,8 @@ published: true
 
 Thank you!
 
-<div className="text-right">
-  <a href="#index" className="hover:underline">
-    🔝 Jump to Index
-  </a>
-</div>
+<a href="#index" className="fixed bottom-4 right-4 px-3 py-1 text-sm font-medium text-white bg-gray-800 no-underline rounded-full shadow-lg hover:bg-gray-900 transition">
+  ↑ Jump to Index
+</a>
 
 <hr className="my-0 mt-2 mb-4" />
