Add my name to credits

--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -1278,6 +1278,7 @@ published: true
 - **Presenters (Japan Habba):** Divishth, Ajit
 - **Presenters (YouTube):** HKS, Sakaido
 - Ila for drawing the Nijika and Ryo chibi avatars for the YouTube presentation
+- Purva for creating this blog post
 
 Thank you!
 
