yt link fixes and date change

--- a/content/blog/Spring2025-recommendations-mar25.mdx
+++ b/content/blog/Spring2025-recommendations-mar25.mdx
@@ -1,7 +1,7 @@
 ---
 title: Spring 2025 season recommendations
 description: 'The most exciting shows of the spring 2025 anime season recommended by BAC members'
-date: 2025-02-24
+date: 2025-03-27
 tags: ["anime"]
 published: true
 ---
@@ -12,7 +12,7 @@ With the spring 2025 season fast approaching some of you seasonal anime watchers
     <h2>**Anne Shirley**</h2>
 </div>
 
-<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/watch?v=GXUaLD071as" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/embed/GXUaLD071as" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
 *Anne of Green Gables* is getting an anime reboot called *Anne Shirley*?! This is the best news ever! If you’re a fan of Anne’s story or just love heartwarming, character-driven tales, this is *absolutely* something you need to watch. Let me tell you why this new adaptation is going to be amazing and why it’s going to bring in so many new fans.
 
@@ -32,7 +32,7 @@ This reboot has the potential to introduce Anne Shirley to a whole new generatio
     <h2>**Kowloon Generic Romance**</h2>
 </div>
 
-<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/watch?v=wIrH_z2TLqQ" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/embed/wIrH_z2TLqQ" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
 I love how this manga questions the meaning of the human self, and explores the way the answers of those around you matter just as much as your own. There is a central conceit that reaches into the heart of humanity and deconstructs it, as all good sci-fi mysteries do. The character try to act normal and focus on their mundane lives, which ironically forces them to confront the big dilemmas that constantly eat away at them. It is a unique blend of ideas that deals with the subject matter in a manner like no other manga.
 
@@ -42,7 +42,7 @@ I love how this manga questions the meaning of the human self, and explores the 
     <h2>**Yaiba**</h2>
 </div>
 
-<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/watch?v=7noPMIddli4" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/embed/7noPMIddli4" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
 Yoshinori Kanada was one of the most influential animators in the world of anime. His characteristic style of animation was dominant in the 80s, but in the modern day the snappy, abrupt Kanada style animation is mostly associated with studio Trigger. However there are still a few Kanada style animators outside Trigger, notably two of the main staff for the new anime adaptation of the 1988 manga, *Yaiba*.
 
@@ -56,7 +56,7 @@ Yaiba was *Detective Conan* mangaka Gosho Aoyama’s third manga which he author
     <h2>**Rock is a lady's modesty**</h2>
 </div>
 
-<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/watch?v=rRwa4N75G4A" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/embed/rRwa4N75G4A" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
 *Rock Is a Lady's Modesty* is a coming-of-age anime music drama about a young girl who, after being thrown into a wealthy lifestyle, rediscovers her love of rock music and joins a band with a professional drummer, all while breaking conventional norms.
 
@@ -66,7 +66,7 @@ Why should you watch it :
  2) Using music as the primary focus, themes of rebellion, modesty, passion are explored with a blend of strong characters and music.
 
  3) BAND-MAID for opening theme 
-    Little Gee Monster for ending theme song. Band-Maid is also doing motion capture for the performances to give a an authentic visual appeal and expression for music.
+    Little Gee Monster for ending theme song. Band-Maid is also doing motion capture for the performances to give an authentic visual appeal and expression for music.
 
  4) The character designs are quite expressive.
 
@@ -80,7 +80,7 @@ Studio : BN Pictures
     <h2>**Food for the Soul**</h2>
 </div>
 
-<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/watch?v=FtAmzXI4q_Y" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/embed/FtAmzXI4q_Y" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
 Atto, the creator of Non Non Biyori, has been pretty quiet since it ended; I guess we now know why. Not only does this series reunite key NNB staff (director Kawatsura, original creator Atto, composer Mizutani), it also transposes them to PA Works, a studio with more progressive industry practices with consistently visually pretty output (and coincidentally, in this NNB context, located in a more rural area). I am a moe enthusiast through and through, and NNB is one of my all time favourite anime. While I have tired a little of some of the sameness in recent 'girls with hobbies' outings (not everything can be NNB or Yuru Camp), this promises to be different thanks to its university setting as well as some interesting staff members, particularly with series composition being handled by Yoshihiro Hiki (Akiba Maid Wars) and art direction by Junichi Higashi (Cowboy Bebop, Zeta Gundam, City Hunter, 12 Kingdoms). I have high hopes for this one.
 
@@ -90,7 +90,7 @@ Atto, the creator of Non Non Biyori, has been pretty quiet since it ended; I gue
     <h2>**Uma Musume:Cinderella Gray**</h2>
 </div>
 
-<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/watch?v=Gw8j8-m1gVk" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+<iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/embed/Gw8j8-m1gVk" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
 It’s interesting to me to know that both of my top recommendations for the upcoming season come from Cygames Pictures. While I wouldn’t call myself a shill of the studio, I’ve realized that I’ve watched almost all of their works—except for the one or two of their idol series and OVAs (apologies HKS but I won’t give in).
 That said, one of the most exciting adaptations I’m looking forward to next year is a title that sends me into a schizo mode, much like your average Solo Leveling fan after a weekly cliffhanger but on a higher level..it’s **Uma Musume:Cinderella Gray**
