--- a/content/blog/anime-spotlight-apr25.mdx
+++ b/content/blog/anime-spotlight-apr25.mdx
@@ -15,16 +15,16 @@ published: true
 
 CLAMP's _xxxHOLiC_ (2006) and directed by Tsutomu Mizushima is a fine blend of supernatural, human psychology, and folklore. It tells the story of Watanuki Kimihiro, a high schooler cursed with the ability to see spirits, and the mysterious Yūko Ichihara, a witch who grants wishes—for a price. The anime touches on themes of addiction, obsession, and human weaknesses, intertwined with their working relationship.
 
-<div style={{marginBottom: '-10px', marginTop: '-10px'}}>
-  <img src="/images/blog/anime-spotlight-apr25/xxxHOLiC-1.webp" className="rounded-xl" />
+<div style={{marginBottom: '-10px', marginTop: '-10px', textAlign: 'center'}}>
+  <img src="/images/blog/anime-spotlight-apr25/xxxHOLiC-1.webp" className="rounded-xl" style={{margin: '0 auto', display: 'block'}} />
 </div>
 
 The title itself, inspired by the concept of addiction, is a clever twist. CLAMP chose the suffix "holic" to reflect the struggles of people with their compulsions. In Japanese, "xxx" acts as a placeholder, making the title pronounced simply as "-holic." This gives the series a unique angle, most evident in _xxxHOLiC: A Midsummer Night's Dream_, where "holic" directly refers to obsessive collectors.
 
 Although _xxxHOLiC_ is inspired by traditional Japanese aesthetics, it borrows from modern gothic and avant-garde fashions. Yūko Ichihara’s extravagant outfits, adorned with kimonos, lace, and elaborate designs, became iconic. This fusion of classical and contemporary styles adds a remarkable visual dimension.
 
-<div style={{marginBottom: '-10px', marginTop: '-10px'}}>
-  <img src="/images/blog/anime-spotlight-apr25/xxxHOLiC-2.webp" className="rounded-xl" />
+<div style={{marginBottom: '-10px', marginTop: '-10px', textAlign: 'center'}}>
+  <img src="/images/blog/anime-spotlight-apr25/xxxHOLiC-2.webp" className="rounded-xl" style={{margin: '0 auto', display: 'block'}} />
 </div>
 
 Breaking the screen in 2006, _xxxHOLiC_ stood out amidst action-heavy narratives, offering introspective storytelling. Its cultural impact remains profound, exploring human flaws and influencing fan art and cosplay communities, solidifying CLAMP’s reputation as masters of intricate storytelling and design.
