--- a/content/blog/anime-spotlight-apr25.mdx
+++ b/content/blog/anime-spotlight-apr25.mdx
@@ -32,8 +32,7 @@ Breaking the screen in 2006, _xxxHOLiC_ stood out amidst action-heavy narratives
 **More Info:**
 <a href="https://myanimelist.net/anime/861/xxxHOLiC" target="_blank">MAL</a>,
 <a href="https://anilist.co/anime/861/xxxHOLiC" target="_blank">Anilist</a>,
-<a href="https://en.m.wikipedia.org/wiki/XxxHolic" target="_blank">Wikipedia</a>
-
+<a href="https://en.m.wikipedia.org/wiki/XxxHolic" target="_blank">Wikipedia</a> \
 **Credits:** Viola Emanon
 
 <hr className="my-4 mt-8 mb-4" />
