--- a/content/blog/anime-spotlight-apr25.mdx
+++ b/content/blog/anime-spotlight-apr25.mdx
@@ -35,8 +35,8 @@ Breaking the screen in 2006, _xxxHOLiC_ stood out amidst action-heavy narratives
 <a href="https://en.m.wikipedia.org/wiki/XxxHolic" target="_blank">Wikipedia</a> \
 **Credits:** Viola Emanon
 
-<hr className="my-4 mt-8 mb-4" />
+<hr className="my-4 mt-8 mb-4 border-t-2" />
 
 Want to be featured on **Anime Spotlight**? Submit your entry [here](https://bac.moe/AnimeSpotlight).
 
-<hr className="my-0 mt-2 mb-4" />
+<hr className="my-0 mt-2 mb-4 border-t-2" />
