--- a/content/blog/anime-spotlight-feb25.mdx
+++ b/content/blog/anime-spotlight-feb25.mdx
@@ -10,7 +10,7 @@ published: true
 **Last Updated:** 9th February 2025
 
 <div style={{marginBottom: '-10px', marginTop: '0px'}}>
-    <h1>**Michiko & Hatchin**</h1>
+    # **Michiko & Hatchin**
 </div>
 
 <div style={{marginBottom: '-10px', marginTop: '-10px'}}>
