--- a/content/blog/manga-spotlight-apr25.mdx
+++ b/content/blog/manga-spotlight-apr25.mdx
@@ -9,7 +9,7 @@ published: true
 📅 **Last Updated:** 29th March 2025
 
 <div style={{marginBottom: '0px', marginTop: '0px'}}>
-    <h1>**The Urban Legend Files**</h1>
+    # **The Urban Legend Files**
 </div>
 
 <div align="center" style = {{marginTop: '-15px', marginBottom: '-15px'}}>
