--- a/content/blog/manga-spotlight-feb25.mdx
+++ b/content/blog/manga-spotlight-feb25.mdx
@@ -9,7 +9,7 @@ published: true
 📅 **Last Updated:** 16th February 2025
 
 <div style={{marginBottom: '-10px', marginTop: '0px'}}>
-    <h1>**Suicide Parabellum**</h1>
+    # **Suicide Parabellum**
 </div>
 
 Suicide Parabellum by Dowman Sayman is an exciting action mystery manga infused with dark humor and subtle Yuri elements. The story follows Chihaya, a violent young woman, as she endlessly chases after a mysterious girl. Their pursuit takes them through different worlds, each with its own set of rules and challenges. As the story unfolds, the truth behind this chase slowly becomes clear.
@@ -41,7 +41,7 @@ Overall, Suicide Parabellum is a great, quick read. It’s one of the best one-v
 <hr className="my-0 mt-2 border-t-2 mb-8" />
 
 <div style={{marginBottom: '-10px', marginTop: '20px'}}>
-    <h1>**GTO: The Early Years**</h1>
+    # **GTO: The Early Years**
 </div>
 
 _GTO: The Early Years_ or _Shonan Junai Gumi!_, written by Fujisawa Tohru, is an action-comedy manga with a school setting. The story follows the Oni-Baku duo (one of them will eventually become the greatest teacher in Japan) and their shenanigans as they pursue their ultimate goal: getting laid. Though the story mostly focuses on their inability to achieve this throughout the manga due to various reasons, it also follows their rivalry with various gangs, their school friendships, and the fame they will carry into the sequel, GTO.
