--- a/content/blog/anime-spotlight-jan25.mdx
+++ b/content/blog/anime-spotlight-jan25.mdx
@@ -9,7 +9,7 @@ published: true
 📅&nbsp;&nbsp;**Last Updated:** 28th January 2025
 
 <div style={{marginBottom: '-10px', marginTop: '0px'}}>
-    <h1>**Kakushigoto**</h1>
+    # **Kakushigoto**
 </div>
 
 <div style={{marginBottom: '-10px', marginTop: '-10px'}}>
@@ -38,7 +38,7 @@ The anime’s clean art style, color palette, and the simple yet charming charac
 <hr className="my-4 mt-8 mb-8" />
 
 <div style={{marginBottom: '-10px', marginTop: '0px'}}>
-    <h1>**Kino's Journey**</h1>
+    # **Kino's Journey**
 </div>
 
 **_Kino's Journey_** is an episodic anime directed by Ryuutarou Nakamura, and produced by Studio A.C.G.T.<sup><a href="#ref-1">[1]</a></sup> The anime adapts the light novel series authored by Keiichi Sigsawa.
