Apr'25 Manga+Anime Spotlights (xxxHolic, Dearest Aforethought) (#17)
* xxxholic

* center images

* justified text in blog posts

* edits

* edits

* heading edits

* edits

* dearest self manga

--- a/content/blog/manga-spotlight-apr25.mdx
+++ b/content/blog/manga-spotlight-apr25.mdx
@@ -1,15 +1,37 @@
 ---
 title: Manga Spotlight Apr'25
-description: 'The Urban Legend Files'
-date: 2025-03-29
+description: 'The Urban Legend Files, My Dearest Self With Malice Aforethought'
+date: 2025-04-13
 tags: ["manga", "recommendation"]
 published: true
 ---
 
-📅 **Last Updated:** 29th March 2025
+📅 **Last Updated:** 13th April 2025
+
+<div style={{marginBottom: '-15px', marginTop: '0px'}}>
+    # **My Dearest Self With Malice Aforethought**
+</div>
+
+If you enjoy psychological thrillers, _My Dearest Self with Malice Aforethought_ is a must-read. This gripping manga follows Eiji Urashima, a college student whose life takes a dark turn when he experiences blackouts, only to discover he’s connected to violent crimes he can’t remember. What begins as a mystery quickly evolves into a deep exploration of identity, morality, and the lengths one goes to uncover the truth about themselves.
+
+<div align="center" style = {{marginTop: '-15px', marginBottom: '-15px'}}>
+    <img src="/images/blog/manga-spotlight-apr25/dearest-self.webp"/>
+</div>
+
+The story is full of twists and suspense, keeping readers guessing at every turn. Shota Ito’s detailed artwork intensifies the emotional and psychological tension, immersing you in Eiji’s unraveling world. It’s a dark and thought-provoking journey that delves into the complexities of human nature.
+
+Though the pacing can feel rushed in some parts, the gripping narrative and shocking revelations more than make up for it. If you’re a fan of dark mysteries, this manga won’t disappoint.
+
+**More Info:**
+<a href="https://myanimelist.net/manga/115746/Shinai_naru_Boku_e_Satsui_wo_Komete" target="_blank">MAL</a>,
+<a href="https://anilist.co/manga/106867/Shinai-naru-Boku-e-Satsui-wo-Komete" target="_blank">Anilist</a> \
+**Credits:** JOL
+(<a href="https://x.com/Saitamagoated" target="_blank">Twitter</a>)
+
+<hr className="my-0 mt-2 border-t-2 mb-4" />
 
 <div style={{marginBottom: '0px', marginTop: '0px'}}>
-    <h1>**The Urban Legend Files**</h1>
+    # **The Urban Legend Files**
 </div>
 
 <div align="center" style = {{marginTop: '-15px', marginBottom: '-15px'}}>
